add img in project

--- a/templates/word/index.html.twig
+++ b/templates/word/index.html.twig
@@ -10,34 +10,34 @@
         <button>Replay</button>
     </form>
     {% if game.step == 1 %}
-        <img id="stick1" src="https://i.imgur.com/ZUh0WSK.png">
+        <img id="stick1" src="{{ asset('assets/img/1.png') }}">
     {% endif %}
     {% if game.step == 2 %}
-        <img id="stick2" src="https://i.imgur.com/zn1TZsc.png">
+        <img id="stick2" src="{{ asset('assets/img/2.png') }}">
     {% endif %}
     {% if game.step == 3 %}
-    <img id="stick3" src="https://i.imgur.com/AxWUw4H.png">
+        <img id="stick3" src="{{ asset('assets/img/3.png') }}">
     {% endif %}
     {% if game.step == 4 %}
-    <img id="stick4" src="https://i.imgur.com/2q4UAXI.png">
+        <img id="stick4" src="{{ asset('assets/img/4.png') }}">
     {% endif %}
     {% if game.step == 5 %}
-    <img id="stick5" src="https://i.imgur.com/cCTeHJJ.png">
+        <img id="stick5" src="{{ asset('assets/img/5.png') }}">
     {% endif %}
     {% if game.step == 6 %}
-    <img id="stick6" src="https://i.imgur.com/Pg92iNM.png">
+        <img id="stick6" src="{{ asset('assets/img/6.png') }}">
     {% endif %}
     {% if game.step == 7 %}
-    <img id="stick7" src="https://i.imgur.com/U94sZ9m.png">
+        <img id="stick7" src="{{ asset('assets/img/7.png') }}">
     {% endif %}
     {% if game.step == 8 %}
-    <img id="stick8" src="https://i.imgur.com/GFPA30S.png">
+        <img id="stick8" src="{{ asset('assets/img/8.png') }}">
     {% endif %}
     {% if game.step == 9 %}
-    <img id="stick9" src="https://i.imgur.com/8Ol4GWF.png">
+        <img id="stick9" src="{{ asset('assets/img/9.png') }}">
     {% endif %}
     {% if game.step == 10 %}
-    <img id="stick10" src="https://i.imgur.com/Icr7LoK.png">
+        <img id="stick10" src="{{ asset('assets/img/10.png') }}">
     {% endif %}
 
 {% endblock %}
